# ninjarmm_screening

step1/: CPPQuestions.txt
step2/: Requirements.txt
step2/exam/: CMakeLists.txt
step2/exam/src/: main.cpp
step2/inc/: Job.h  Pilot.h  Programmer.h
step2/src/: Job.cpp  Pilot.cpp  Programmer.cpp
step3/: CodeReview.cpp
step4/: CMakeLists.txt  CodeChallenge.cpp
